<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorHomeBackground"
    android:orientation="vertical">

    <include layout="@layout/base_toolbar" android:id="@+id/toolbar"/>
    <RelativeLayout android:visibility="gone"
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            layout="@layout/title_head_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/savepic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/mar_25"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:textColor="@color/white"
            android:padding="@dimen/mar_15"
            android:text="@string/save"
            />
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/ll"
        android:layout_below="@+id/toolbar"
        android:gravity="center">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            tools:src="@drawable/icon_search" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">


        <TextView
            android:id="@+id/photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/white"
            android:gravity="center"
            android:padding="@dimen/mar_15"
            android:text="@string/photo"
            android:textSize="17sp" />


        <TextView
            android:id="@+id/selectpic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="1dp"
            android:background="@color/white"
            android:gravity="center"
            android:padding="@dimen/mar_15"
            android:text="@string/selectpic"
            android:textSize="17sp" />



    </LinearLayout>

</RelativeLayout>
