<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="5dp"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:padding="5dp"
            android:text="@string/pay_detail"
            android:id="@+id/tv_top"
            android:textSize="20sp" />

        <com.yidu.sevensecondmall.views.widget.iconfonts.IconFontTextView
            android:id="@+id/if_tv_close"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/back"
            android:textSize="13sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_market_id"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="1dp"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="11dp"
            android:layout_marginRight="46dp"
            android:text="@string/id"
            android:textColor="@color/colorHomeHeadLineComment" />

        <TextView
            android:id="@+id/tv_shop_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/mar_15"
            android:background="@null"
            android:textColor="@color/colorGray"
            android:textSize="12sp"
            tools:hint="QMSG00123456" />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/rl_pay_type"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="1dp"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="11dp"
            android:layout_marginRight="46dp"
            android:text="@string/pay_type"
            android:textColor="@color/colorHomeHeadLineComment" />

        <com.yidu.sevensecondmall.views.widget.iconfonts.IconFontTextView
            android:id="@+id/if_tv"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:rotation="180"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:text="@string/back"
            android:textSize="13sp" />

        <TextView
            android:layout_toLeftOf="@+id/if_tv"
            android:id="@+id/tv_pay_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@null"
            android:textSize="12sp"
            android:text="" />


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_pay_money"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="1dp"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="11dp"
            android:layout_marginRight="46dp"
            android:text="@string/need_pay" />

        <TextView
            android:id="@+id/tv_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/mar_15"
            android:background="@null"
            android:textSize="12sp"
            tools:hint="72.00" />

    </RelativeLayout>



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingBottom="@dimen/martop_28">
        <TextView
            android:id="@+id/tv_affirm"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="11dp"
            android:layout_marginRight="11dp"
            android:layout_marginTop="75dp"
            android:layout_marginBottom="@dimen/mar_15"
            android:background="@drawable/add_request_btn_shape"
            android:gravity="center"
            android:text="@string/sure_to_pay"
            android:textColor="@color/white" />

    </RelativeLayout>

</LinearLayout>